--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Aquí iría el titulo de la página</h1>
     <p>esto es un párrafo</p>
+    <p>Esto es segundo párrafo</p>
 </body>
 </html>
